force-app/main/default/objects/CEL_Bounces__c/CEL_Bounces__c.object-meta.xml
<CustomObject>
    <label>Bounce</label>
    <nameField>
        <label>Bounces Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bounces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>