force-app/main/default/objects/CEL_Bounces__c/fields/cel_bounce_time__c.field-meta.xml
<CustomField>
    <fullName>cel_bounce_time__c</fullName>
    <label>Bounce time</label>
    <type>DateTime</type>
</CustomField>