force-app/main/default/objects/CEL_Bounces__c/fields/cel_campaign_id__c.field-meta.xml
<CustomField>
    <fullName>cel_campaign_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Bounces</relationshipLabel>
    <relationshipName>Bounces</relationshipName>
    <type>Lookup</type>
</CustomField>