force-app/main/default/objects/CEL_Bounces__c/fields/cel_category__c.field-meta.xml
<CustomField>
    <fullName>cel_category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1100</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1300</fullName>
            </value>
            <value>
                <fullName>1400</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>1600</fullName>
            </value>
            <value>
                <fullName>1700</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
            </value>
            <value>
                <fullName>1900</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2100</fullName>
            </value>
            <value>
                <fullName>2200</fullName>
            </value>
            <value>
                <fullName>2300</fullName>
            </value>
            <value>
                <fullName>2400</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
            <value>
                <fullName>2600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>