force-app/main/default/objects/CEL_Bounces__c/fields/cel_category_name_c__c.field-meta.xml
<CustomField>
    <fullName>cel_category_name_c__c</fullName>
    <label>Category_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>