force-app/main/default/objects/CEL_Bounces__c/fields/cel_ext_ccmp_id__c.field-meta.xml
<CustomField>
    <fullName>cel_ext_ccmp_id__c</fullName>
    <externalId>true</externalId>
    <label>CCMP ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>